--- a/app/less/font.less
+++ b/app/less/font.less
@@ -2,5 +2,17 @@
 	.font(Italiana)
 }
 @font-face{
+	.font(Montserrat)
+}
+@font-face{
+	.font(Gotham)
+}
+@font-face{
+	.font(Gotham, 500)
+}
+@font-face{
+	.font(Gotham, 700)
+}
+@font-face{
 	.font(OpensansBold, 'bold/', bold)
 }
