--- a/app/less/mixin.less
+++ b/app/less/mixin.less
@@ -11,3 +11,14 @@
   font-weight: @weight;
   font-style: @style;
 }
+.pxToEm(@px, @base: @fontSize){
+  @pxToEm: @px / @base + 0em;
+}
+.pxToEm2(@px, @base: @fontSize){
+  @pxToEm2: @px / @base + 0em;
+}
+.pxToEm3(@px, @base: @fontSize){
+  @pxToEm3: @px / @base + 0em;
+}
+
+
