--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -5,14 +5,13 @@ block title
 	meta(name='description', content='Тестовое задание для proContext')
 
 block main
-	
-	h1 #{hhh}
+	main
 
-	include template/main/cars
-	
-	include template/main/questions
-	
-	include template/main/map
+		include template/main/cars
+		
+		include template/main/questions
+		
+		include template/main/map
 
 
 
