--- a/app/less/variable.less
+++ b/app/less/variable.less
@@ -1,3 +1,17 @@
-@font1: Italiana;
+@fontSize: 16;
+
+.font1(){
+	font-family: Italiana, sans-serif;
+}
+
+.font2(){
+	font-family: Montserrat, sans-serif;
+}
+.font3(){
+	font-family: Gotham, sans-serif;
+}
+
+@mainColor: hsla(358, 84%, 54%, 1);
+
 
 
