--- a/app/pug/template/parts/Header.pug
+++ b/app/pug/template/parts/Header.pug
@@ -1,19 +1,21 @@
 header.header 
-	section.navigation.container
-		#logo Logo
+	section.navigation-wrapper
+		.navigation.container
+			a(href="#")#logo Logo
 
-		nav
-			for item in [1, 2, 3]
-				a(href='#')._item= 'Пункт меню ' + item
+			nav.nav
+				for item in [1, 2, 3]
+					a(href='#')._item= 'Пункт меню ' + item
 
-		._call.btn.btn--main Обратный звонок
+			._call.btn.btn--main Обратный звонок
 
-	._text.container
-		h2 ВСЕ ВИДЫ РАБОТ. 
-		h3 ПРЕМИАЛЬНОЕ КАЧЕСТВО ПО ДОСТУПНЫМ ЦЕНАМ.
+	.header-content.container
+		._headers
+			h2._h2 ВСЕ ВИДЫ РАБОТ.
+			h3._h3 ПРЕМИАЛЬНОЕ КАЧЕСТВО ПО ДОСТУПНЫМ ЦЕНАМ.
 
-		form.header__form
-			input.header__input
+		form._form
+			input(placeholder="+7 (___) - __ -  __").btn._input
 			button.btn.btn--main Обратный звонок
 
 
