--- a/app/less/font.less
+++ b/app/less/font.less
@@ -5,6 +5,15 @@
 	.font(Montserrat)
 }
 @font-face{
+	.font(Montserrat, 500)
+}
+@font-face{
+	.font(Montserrat, 600)
+}
+@font-face{
+	.font(Montserrat, 700)
+}
+@font-face{
 	.font(Gotham)
 }
 @font-face{
