--- a/app/less/global.less
+++ b/app/less/global.less
@@ -1,12 +1,13 @@
 *, *:before, *:after {
 	box-sizing: inherit;
+    margin: 0;
+    padding: 0;
 }
 html {
 	box-sizing: border-box;
 }
-ul {
-	margin: 0;
-	padding: 0;
+input{
+  font: inherit;
 }
 a {
 	text-decoration: none;
