--- a/app/less/globalClasses.less
+++ b/app/less/globalClasses.less
@@ -1,7 +1,7 @@
 .container {
   max-width: 1300px;
   margin: 0 auto;
-  padding: 0 3em;
+  padding: 0 3%;
 }
 
 .btn{
@@ -10,6 +10,8 @@
   text-align: center;
 
   border: 1px solid #fff;
+
+  cursor: pointer;
 }
 .btn--main{
   color: #fff;
@@ -18,17 +20,21 @@
 
   padding: 0 2em;
 
-  cursor: pointer;
-
   &:hover{
     color: @mainColor;
     border-color: @mainColor;
     background-color: #fff;
   }
 }
-.btn--small{
+.btn--second{
   font-size: 0.9em;
   line-height: 2.8em;
 
   border: 1px solid #000;
+
+  &:hover{
+    color: #fff;
+    background-color: @mainColor;
+    border-color: @mainColor;
+  }
 }
