--- a/app/pug/template/main/cars.pug
+++ b/app/pug/template/main/cars.pug
@@ -24,23 +24,24 @@ section.cars.container
 	.cars-list
 		for item in carList
 			.car-item
-			h3._title= item.name
-			._qty
-				._qty-item
-					+svg("#car", "car-item__icon", '20')
-					._text 10 А/М В НАЛИЧИИ
-				._qty-item
-					+svg("#clock", "car-item__icon", '20')
-					._text ЛИЗИНГ А/М
+				h3._title= item.name
+				._qty
+					._qty-item
+						+svg("#car", "car-item__icon", '20')
+						span._text 10 А/М В НАЛИЧИИ
+					._qty-item
+						+svg("#clock", "car-item__icon", '20')
+						span._text ЛИЗИНГ А/М
 
-			img(src=item.img)._img
+				img(src=item.img)._img
 
-			._description 2.7 дизель, Common rail, 150 л.с., МКПП, Задний привод
+				._description 2.7 дизель, Common rail, 150 л.с., МКПП, Задний привод
 
-			.btns
-				button._btn.btn.btn--main Получить спец. цену
-				button._btn.btn.btn--second Спец. условия по лизингу
-				button._btn.btn.btn--second Подобрать автомобиль
+				form._form
+					input(value="2" name="id").visually-hidden
+					button._btn.btn.btn--main Получить спец. цену
+					button._btn.btn.btn--second Спец. условия по лизингу
+					button._btn.btn.btn--second Подобрать автомобиль
 
 
 
