--- a/app/less/variable.less
+++ b/app/less/variable.less
@@ -1,17 +1,20 @@
 @fontSize: 16;
+@mainColor: hsla(358, 84%, 54%, 1);
 
 .font1(){
 	font-family: Italiana, sans-serif;
 }
-
 .font2(){
 	font-family: Montserrat, sans-serif;
 }
 .font3(){
 	font-family: Gotham, sans-serif;
 }
+.font4(){
+	font-family: NobelWGL, sans-serif;
+}
 
-@mainColor: hsla(358, 84%, 54%, 1);
+
 
 
 
