--- a/app/pug/template/template.pug
+++ b/app/pug/template/template.pug
@@ -25,6 +25,10 @@ html(lang='ru')
 		block footer
 			include parts/Footer
 
+		block modal
+			include parts/modal
+
+
 		block svg
 			.svg-container
 				include parts/svg/sprite.symbol.svg
