--- a/app/less/mixin.less
+++ b/app/less/mixin.less
@@ -2,8 +2,8 @@
   font-family: '@{fontFamily}';
   font-display: swap;
   src: local('@{fontFamily}'),
-    url('../font/@{path}@{fontName}.woff2') format('woff2'),
-    url('../font/@{path}@{fontName}.woff') format('woff'),
+    //url('../font/@{path}@{fontName}.woff2') format('woff2'),
+    //url('../font/@{path}@{fontName}.woff') format('woff'),
     url('../font/@{path}@{fontName}.eot') format("eot"),
     url('../font/@{path}@{fontName}.svg') format('svg'),
     url('../font/@{path}@{fontName}.eot#iefix') format('embedded-opentype'),
