--- a/app/pug/template/main/cars.pug
+++ b/app/pug/template/main/cars.pug
@@ -39,9 +39,9 @@ section.cars.container
 
 				form._form
 					input(value="2" name="id").visually-hidden
-					button._btn.btn.btn--main Получить спец. цену
-					button._btn.btn.btn--second Спец. условия по лизингу
-					button._btn.btn.btn--second Подобрать автомобиль
+					button.btn.-main._btn.show-modal Получить спец. цену
+					button.btn.-second._btn.show-modal Спец. условия по лизингу
+					button.btn.-second._btn.show-modal Подобрать автомобиль
 
 
 
