--- a/app/pug/template/main/questions.pug
+++ b/app/pug/template/main/questions.pug
@@ -3,8 +3,10 @@ section.questions.container
 	._text Мы перезвоним вам и ответим на любой вопрос
 
 	form._form
-		input(placeholder='Ваше имя')._input.btn
-		input(placeholder='+7 (___) ___-__-__')._input.btn
-		button._btn.btn.btn--main Обратный звонок
+		input(placeholder='Ваше имя' name="name")._input.btn
+		input(placeholder='+7 (___) ___-__-__' name="phone")._input.btn
+		button.btn.-main._btn.send-btn Обратный звонок
+		.error-message.visually-hidden Необходимо заполнить все поля
 
-	small._small-text Нажимая кнопку я подтверждаю свое ознакомление с порядком обработки персональных данных со стороны КОМПАНИИ и даю свободное и осознанное согласие на их обработку, на получение информации по каналам связи, в том числе в рекламных целях. Подробно тут
+	small._small-text Нажимая кнопку я подтверждаю свое ознакомление с порядком обработки персональных данных со стороны КОМПАНИИ и даю свободное и осознанное согласие на их обработку, на получение информации по каналам связи, в том числе в рекламных целях.
+		a(href="#") Подробно тут
