--- a/app/less/parts/modal.less
+++ b/app/less/parts/modal.less
@@ -1,4 +1,4 @@
-.modal-wrapper{
+#modal-wrapper{
   .center;
 
   width: 100%;
@@ -8,7 +8,7 @@
 
   background-color: hsla(0, 0%, 0%, 0.5);
 
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 2;
@@ -25,6 +25,8 @@
   background-color: #fff;
 
   position: relative;
+
+  display: none;
 
   &__cross{
     position: absolute;
@@ -91,6 +93,6 @@
 
 }
 
-.hidden{
-  display: none;
+.shown{
+  display: block;
 }
