--- a/app/pug/template/main/map.pug
+++ b/app/pug/template/main/map.pug
@@ -1,4 +1,4 @@
-section.map Map
+section.map
     a(href="https://yandex.com/maps?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;") Яндекс Карты
     a(href="https://yandex.com/maps/geo/moskva/53000094/?ll=37.385534%2C55.584227&utm_medium=mapframe&utm_source=maps&z=9" style="color:#eee;font-size:12px;position:absolute;top:14px;") Москва — Яндекс Карты
     iframe(src="https://yandex.com/map-widget/v1/?ll=37.385534%2C55.584227&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1MzAwMDA5NBIa0KDQvtGB0YHQuNGPLCDQnNC-0YHQutCy0LAiCg2GeBZCFQEGX0I%2C&z=9"  frameborder="1" allowfullscreen="true")._frame
