--- a/app/pug/template/parts/modal.pug
+++ b/app/pug/template/parts/modal.pug
@@ -1,6 +1,6 @@
 #modal-wrapper.visually-hidden
     .modal.shown#showForm
-        img(src="../images/dest/cross.png" alt="cross icon")._cross
+        img(src="./images/dest/cross.png" alt="cross icon")._cross
 
         h3._header Заголовок формы
         ._text Мы перезвоним вам и ответим на любой вопрос
