--- a/app/less/parts/header.less
+++ b/app/less/parts/header.less
@@ -6,7 +6,7 @@
 	min-height: 100vh;
 
 	background-color: #000;
-	background-image: url('../../images/dest/header-bg.jpg');
+	background-image: url('../images/dest/header-bg.jpg');
 	background-position: right center;
 	background-size: cover;
 	color: #fff;
