--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -1,8 +1,8 @@
 extends template/template.pug
 
 block title
-	title= 'proContext'
-	meta(name='description', content='Тестовое задание для proContext')
+	title= 'test'
+	meta(name='description', content='Тестовое задание')
 
 block main
 	main
